# Rox

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  config.toml  go.mod  go.sum  main.go  main.rs  pkgdb.sql  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
cmd/: addRepo.go  root.go
configs/: config.toml  example.toml  win_example.toml
src/: config.rs  main.rs  packageLDB.db  schema.rs
src/Litespeed/: mod.rs  pkgBD
src/basic_funcs/: add.rs  install.rs  mod.rs
src/parser/: mod.rs
src/pkg/: mod.rs
tomls/: basic.toml  simple-project.toml  source.toml
