[package]
name = "rox"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/muppi090909/Rox"
license = "GPL-2.0-only"
authors = [ "Ishaan Subramanya" ]
documentation = "https://docs.rs/Rox/0.1.0/Rox/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
toml = "0.5.9"
reqwest = "0.11.11"
serde = {version = "1.0.144", features = ["derive"]}
