[package]
name = "rox"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/muppi090909/Rox"
license = "GPL-2.0-only"
authors = [ "Ishaan Subramanya", "Gaurav Chandrashekar" ]
documentation = "https://docs.rs/Rox/0.1.0/Rox/"
exclude = ["tomls/*", "tomls/", "configs/*", "configs", "assets/*", "assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
toml = "0.5.9"
reqwest = "0.11.11"
serde = {version = "1.0.144", features = ["derive"]}
rand = "0.8.5"
git2 = "0.15.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
thiserror = "1.0.37"
colored = "2.0.0"
openssl = { version = "0.10", features = ["vendored"] }
sea-query = "0.26.3"
sea-query-rusqlite = { version = "0.1.0", git = "https://github.com/SeaQL/sea-query" }
